# ai-dating

./: .gitignore  README.md  package.json  pnpm-lock.yaml
sandbox/ai-dating/: .flaskenv  .gitignore  .python-version  Dockerfile  README  README.md  alembic.ini  app.db  bootstrap_requirements.txt  default.env  docker-compose.yaml  entrypoint.sh  nginx.conf  override.env  pyproject.toml  pyvenv.cfg  requirements.in  requirements.txt
sandbox/ai-dating/ai-dating/: pyvenv.cfg
sandbox/ai-dating/backend/: Dockerfile  dev_requirements.txt  entrypoint.sh  pyproject.toml
sandbox/ai-dating/backend/migrations/: env.py
sandbox/ai-dating/backend/migrations/versions/: 59bcb00b9e74_create_a_baseline_migrations.py
sandbox/ai-dating/backend/src/: config.py
sandbox/ai-dating/backend/src/internal/: admin.py
sandbox/ai-dating/backend/src/lib/: db_utils.py  image_utils.py  logging.py  open_api_client.py  prompts.py
sandbox/ai-dating/backend/src/routers/: chats.py  posts.py  users.py
sandbox/ai-dating/frontend/: Dockerfile  package.json
sandbox/ai-dating/frontend/nginx/: nginx.conf
sandbox/ai-dating/frontend/src/: App.js
sandbox/ai-dating/migrations/: env.py
sandbox/ai-dating/migrations/versions/: 1150a1b8adaf_change_to_text.py  1396af14de17_create_tables.py  1e001f51e212_users_table.py  27223f4d303f_create_a_baseline_migrations.py  656f4896db74_create_a_baseline_migrations.py  973fc4a8c6d0_initial_commit.py  98bce8bb4828_posts_table.py  bd31c0474bba_add_more_complex_model.py  e01d2c303970_one_more.py
sandbox/ai-dating/scripts/: bootstrap
sandbox/ai-dating/src/: app.db  app.py  config.py  dependencies.py  main.py  manage.py  models.py  wsgi.py
sandbox/ai-dating/src/api/: health.py  posts.py  users.py
sandbox/ai-dating/src/lib/: chat_session.py  db_utils.py  message_utils.py  open_api_client.py  prompts.py  utils.py
sandbox/ai-dating/src/models/: base_model.py  posts.py  users.py
sandbox/ai-dating/src/routers/: chats.py  posts.py  users.py
sandbox/ai-dating/src/templates/: base.html
sandbox/ai-dating/tests/: base_test_case.py
sandbox/ai-dating/tests/api/: users_test.py
sandbox/wingman-sandbox/: index.py
src/: env.js
src/app/: layout.tsx  page.tsx
src/app/api/chat/: route.ts
